force-app/main/default/objects/integrator_da__Related_SObject_Sync__c/integrator_da__Related_SObject_Sync__c.object-meta.xml
<CustomObject>
    <label>Related SObject Sync</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Related SObject Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related SObject Syncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>