force-app/main/default/objects/integrator_da__Related_SObject_Sync__c/fields/integrator_da__Filter__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Filter__c</fullName>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>