force-app/main/default/objects/integrator_da__Related_SObject_Sync__c/fields/integrator_da__Real_Time_Sync__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Real_Time_Sync__c</fullName>
    <label>Real Time Sync</label>
    <referenceTo>integrator_da__Real_Time_Sync__c</referenceTo>
    <relationshipLabel>Related SObject Syncs</relationshipLabel>
    <relationshipName>Related_SObject_Syncs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>