force-app/main/default/objects/integrator_da__Related_SObject_Sync__c/fields/integrator_da__User_Defined__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__User_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check the field to mark the related list user defined, the integrator.io will not remove this record when updating its parent record</description>
    <label>User Defined</label>
    <type>Checkbox</type>
</CustomField>